# igpt

./: .gitignore  Cargo.toml  README.md  build.rs  tauri.conf.json
.github/: readme.md
.github/workflows/: release.yml
capabilities/: default.json
src/: lib.rs  win.rs
src/controller/: base.rs  home.rs  mod.rs  user.rs
src/db/: migrate.rs  mod.rs  sqlite.rs  test.rs
src/log/: mod.rs
src/res/: mod.rs  test.rs
src/util/: env.rs  error.rs  file.rs  json.rs  mod.rs
ui/: index.html
