[package]
name = "igpt"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[profile.dev]
incremental = true

[profile.release]
incremental = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.22"
tauri = { version = "2.1.0", features = ["devtools"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
lazy_static = "1.4.0"
base64 = "0.22.1"
tauri-plugin-http = { version = "2", features = ["unsafe-headers", "stream", "rustls-tls"] }
log4rs = "1.3.0"
mime_guess = "2.0.5"
regex = "1.11.1"
rand = "0.8.5"
zip = "2.2.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
chrono = "0.4.39"
dirs = "5.0.1"
# rustls = "0.23.21"
# tauri-plugin-clipboard-manager = "2.2.0"
# tauri-plugin-devtools = "2.0.0"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
objc = "0.2.7"
